--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title></title>
+	<script src="app.js"></script>
 </head>
 
 <body>
-	<h1>Hello</h1>
+	<div id="app"></div>
+	<script>
+		var app = Elm.Main.init({
+			node: document.getElementById('app')
+		});
+	</script>
 </body>
 
 </html>
